--- a/index.html
+++ b/index.html
@@ -1,142 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Flashcard Vocabulary | AllENInHere</title>
+  <title>Đăng nhập / Đăng ký | AllENInHere</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
+    * {
+      box-sizing: border-box;
+      font-family: 'Roboto', sans-serif;
+    }
+
     body {
-      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
       background: #f0f4f8;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px;
-    }
-
-    h1 {
-      color: #333;
-      margin-bottom: 20px;
-    }
-
-    .flashcard {
-      width: 300px;
-      height: 200px;
-      perspective: 1000px;
-      margin-bottom: 20px;
-    }
-
-    .card {
-      width: 100%;
-      height: 100%;
-      position: relative;
-      transition: transform 0.6s;
-      transform-style: preserve-3d;
-      cursor: pointer;
-    }
-
-    .card.flip {
-      transform: rotateY(180deg);
-    }
-
-    .card-side {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
       display: flex;
       align-items: center;
       justify-content: center;
-      backface-visibility: hidden;
-      font-size: 24px;
+      min-height: 100vh;
     }
 
-    .card-front {
-      background-color: #1e88e5;
-      color: white;
+    .container {
+      background: #fff;
+      padding: 30px 40px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+      width: 100%;
+      max-width: 400px;
     }
 
-    .card-back {
-      transform: rotateY(180deg);
-      background-color: #fbc02d;
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
       color: #333;
     }
 
-    .buttons {
+    .tabs {
       display: flex;
-      gap: 20px;
+      justify-content: center;
+      margin-bottom: 20px;
     }
 
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
+    .tabs button {
+      flex: 1;
+      padding: 10px;
+      background-color: #e3f2fd;
       border: none;
-      border-radius: 8px;
-      background-color: #42a5f5;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .tabs button.active {
+      background-color: #1976d2;
       color: white;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 14px;
+    }
+
+    button.submit {
+      width: 100%;
+      padding: 12px;
+      background-color: #1976d2;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
       cursor: pointer;
       transition: background-color 0.3s;
     }
 
-    button:hover {
-      background-color: #1e88e5;
+    button.submit:hover {
+      background-color: #0d47a1;
+    }
+
+    .form-section {
+      display: none;
+    }
+
+    .form-section.active {
+      display: block;
     }
   </style>
 </head>
 <body>
 
-  <h1>Flashcard Học Từ Vựng</h1>
+  <div class="container">
+    <h2>All In English</h2>
 
-  <div class="flashcard" onclick="flipCard()">
-    <div class="card" id="card">
-      <div class="card-side card-front" id="card-front">Loading...</div>
-      <div class="card-side card-back" id="card-back">...</div>
+    <div class="tabs">
+      <button class="tab-btn active" onclick="switchTab('login')">Đăng nhập</button>
+      <button class="tab-btn" onclick="switchTab('register')">Đăng ký</button>
+    </div>
+
+    <!-- Đăng nhập -->
+    <div id="login-section" class="form-section active">
+      <div class="form-group">
+        <input id="login-username" type="text" placeholder="Tên đăng nhập">
+      </div>
+      <div class="form-group">
+        <input id="login-password" type="password" placeholder="Mật khẩu">
+      </div>
+      <button class="submit" onclick="login()">Đăng nhập</button>
+    </div>
+
+    <!-- Đăng ký -->
+    <div id="register-section" class="form-section">
+      <div class="form-group">
+        <input id="reg-username" type="text" placeholder="Tên đăng nhập">
+      </div>
+      <div class="form-group">
+        <input id="reg-password" type="password" placeholder="Mật khẩu">
+      </div>
+      <button class="submit" onclick="register()">Đăng ký</button>
     </div>
   </div>
 
-  <div class="buttons">
-    <button onclick="prevWord()">◀ Trước</button>
-    <button onclick="nextWord()">Tiếp ▶</button>
-  </div>
-
   <script>
-    const flashcards = [
-      { word: "apple", meaning: "quả táo" },
-      { word: "book", meaning: "quyển sách" },
-      { word: "run", meaning: "chạy" },
-      { word: "happy", meaning: "vui vẻ" },
-      { word: "computer", meaning: "máy tính" },
-    ];
-
-    let currentIndex = 0;
-    const card = document.getElementById("card");
-    const front = document.getElementById("card-front");
-    const back = document.getElementById("card-back");
-
-    function updateCard() {
-      const item = flashcards[currentIndex];
-      front.textContent = item.word;
-      back.textContent = item.meaning;
-      card.classList.remove("flip");
+    function switchTab(tab) {
+      document.querySelectorAll('.form-section').forEach(el => el.classList.remove('active'));
+      document.querySelectorAll('.tab-btn').forEach(btn => btn.classList.remove('active'));
+      document.getElementById(`${tab}-section`).classList.add('active');
+      event.target.classList.add('active');
     }
-
-    function nextWord() {
-      currentIndex = (currentIndex + 1) % flashcards.length;
-      updateCard();
-    }
-
-    function prevWord() {
-      currentIndex = (currentIndex - 1 + flashcards.length) % flashcards.length;
-      updateCard();
-    }
-
-    function flipCard() {
-      card.classList.toggle("flip");
-    }
-
-    updateCard(); // Load từ đầu tiên
   </script>
+
+  <!-- JavaScript xử lý đăng ký/đăng nhập -->
+  <script type="module" src="js/simpleAuth.js"></script>
+
 </body>
-</html>
