--- a/create-topic.html
+++ b/create-topic.html
@@ -1,73 +1,148 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Tạo Bộ Từ Vựng | AllENInHere</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tạo chủ đề mới | AllInEnglish</title>
   <style>
-    * { box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
+    :root {
+      --primary: #1976d2;
+      --success: #388e3c;
+      --light-bg: #f3f6f9;
+      --card-bg: #ffffff;
+    }
     body {
-      background: #f0f4f8;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--light-bg);
       margin: 0;
       padding: 20px;
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
     }
-    h2 { color: #1976d2; }
-    .form-container, .word-list {
-      background: #fff;
+    .container {
+      width: 100%;
+      max-width: 700px;
+      background: var(--card-bg);
+      padding: 24px;
       border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      padding: 20px;
-      width: 100%;
-      max-width: 500px;
-      margin-top: 20px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      box-sizing: border-box;
     }
-    input[type="text"] {
+    h2 {
+      text-align: center;
+      color: var(--primary);
+      margin-bottom: 20px;
+    }
+    label {
+      font-weight: 500;
+      display: block;
+      margin-bottom: 6px;
+      margin-top: 12px;
+    }
+    input[type="text"], textarea, input[type="file"] {
       width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
+      padding: 12px;
+      font-size: 16px;
       border-radius: 6px;
+      border: 1px solid #ccc;
+      margin-bottom: 16px;
+      box-sizing: border-box;
+    }
+    textarea {
+      resize: vertical;
+      min-height: 120px;
     }
     button {
-      padding: 10px 16px;
-      background-color: #1976d2;
+      width: 100%;
+      background-color: var(--success);
       color: white;
+      padding: 12px;
+      font-size: 16px;
       border: none;
       border-radius: 6px;
       cursor: pointer;
+      transition: background-color 0.2s;
     }
-    ul {
-      padding-left: 20px;
+    button:hover {
+      background-color: #2e7d32;
     }
-    li {
-      margin: 5px 0;
+    .preview {
+      background-color: #f0f0f0;
+      padding: 12px;
+      border-radius: 6px;
+      font-size: 15px;
+      max-height: 240px;
+      overflow-y: auto;
+      box-sizing: border-box;
+    }
+    .preview ul {
+      list-style: none;
+      padding-left: 0;
+      margin: 0;
+    }
+    .preview li {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: 6px 0;
+      border-bottom: 1px solid #ddd;
+      gap: 10px;
+    }
+    .preview li span {
+      flex: 1;
+      word-break: break-word;
+      display: inline-block;
+    }
+    .remove-btn {
+      background: none;
+      border: none;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      width: 24px;
+      height: 24px;
+      min-width: 24px;
+      color: red;
+      font-size: 16px;
+    }
+    .remove-btn:hover {
+      font-weight: bold;
+      transform: scale(1.2);
+      transition: transform 0.2s;
+    }
+    @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
+      .container {
+        padding: 16px;
+      }
+      input[type="text"], textarea, input[type="file"], button {
+        font-size: 15px;
+      }
     }
   </style>
 </head>
 <body>
-  <h2>Tạo Bộ Từ Vựng Mới</h2>
+  <div class="container">
+    <h2>Tạo Chủ Đề Mới</h2>
 
-  <div class="form-container">
-    <label>Tên chủ đề:</label>
-    <input type="text" id="topic-name" placeholder="VD: Động vật">
+    <label for="topic-name">Tên chủ đề</label>
+    <input type="text" id="topic-name" placeholder="Ví dụ: Động vật, Giao tiếp, Du lịch..." />
 
-    <label>Từ tiếng Anh:</label>
-    <input type="text" id="vocab-word" placeholder="VD: cat">
+    <label for="vocab-list">Nhập từ vựng thủ công</label>
+    <textarea id="vocab-list" placeholder="Gõ từng dòng: từ-nghĩa (vd: apple-quả táo)..."></textarea>
 
-    <label>Nghĩa tiếng Việt:</label>
-    <input type="text" id="vocab-meaning" placeholder="VD: mèo">
+    <label for="excel-file">Hoặc chọn file Excel (.xlsx) để tải từ vựng</label>
+    <input type="file" id="excel-file" accept=".xlsx, .xls" />
 
-    <button onclick="addWord()">Thêm từ</button>
-
-    <div class="word-list">
-      <h4>Từ đã thêm:</h4>
-      <ul id="word-list"></ul>
-    </div>
-
-    <button onclick="saveTopic()" style="margin-top: 15px;">Lưu chủ đề</button>
+    <button id="btn-create">Tạo chủ đề</button>
+    <div class="preview" id="preview-box"></div>
   </div>
 
   <script type="module">
@@ -77,69 +152,99 @@
       addDoc,
       updateDoc,
       doc,
-      serverTimestamp
-    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+      Timestamp
+    } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js';
 
-    const words = [];
+    import * as XLSX from 'https://cdn.sheetjs.com/xlsx-0.20.0/package/xlsx.mjs';
 
-    window.addWord = () => {
-      const word = document.getElementById('vocab-word').value.trim();
-      const meaning = document.getElementById('vocab-meaning').value.trim();
+    const btn = document.getElementById("btn-create");
+    const vocabInput = document.getElementById("vocab-list");
+    const previewBox = document.getElementById("preview-box");
+    const excelFileInput = document.getElementById("excel-file");
 
-      if (!word || !meaning) {
-        alert("Vui lòng nhập cả từ và nghĩa.");
-        return;
-      }
+    function updatePreview() {
+      const lines = vocabInput.value.trim().split("\n").filter(Boolean);
+      let html = "<strong>Xem trước:</strong><ul>";
+      lines.forEach((line, index) => {
+        const [word, meaning] = line.split("-").map(s => s.trim());
+        if (word && meaning) {
+          html += `<li><span><strong>${word}</strong>: ${meaning}</span> <button class='remove-btn' data-index='${index}'>&times;</button></li>`;
+        } else {
+          html += `<li style='color:red'><span>Dòng lỗi: ${line}</span> <button class='remove-btn' data-index='${index}'>&times;</button></li>`;
+        }
+      });
+      html += "</ul>";
+      previewBox.innerHTML = html;
 
-      words.push({ word, meaning });
-      document.getElementById('word-list').innerHTML += `<li>${word} - ${meaning}</li>`;
-      document.getElementById('vocab-word').value = '';
-      document.getElementById('vocab-meaning').value = '';
-    };
+      previewBox.querySelectorAll(".remove-btn").forEach(btn => {
+        btn.addEventListener("click", () => {
+          const index = parseInt(btn.dataset.index);
+          const lines = vocabInput.value.trim().split("\n").filter(Boolean);
+          lines.splice(index, 1);
+          vocabInput.value = lines.join("\n");
+          updatePreview();
+        });
+      });
+    }
 
-    window.saveTopic = async () => {
-      const topicName = document.getElementById('topic-name').value.trim();
+    vocabInput.addEventListener("input", updatePreview);
+
+    excelFileInput.addEventListener("change", async (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
+
+      const data = await file.arrayBuffer();
+      const workbook = XLSX.read(data);
+      const sheet = workbook.Sheets[workbook.SheetNames[0]];
+      const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+
+      const lines = rows
+        .filter(r => r.length >= 2)
+        .map(r => `${r[0]} - ${r[1]}`);
+
+      vocabInput.value = lines.join("\n");
+      updatePreview();
+    });
+
+    btn.addEventListener("click", async () => {
       const owner = localStorage.getItem("loggedInUser");
+      const name = document.getElementById("topic-name").value.trim();
+      const vocabText = vocabInput.value.trim();
 
-      if (!owner) {
-        alert("Bạn chưa đăng nhập!");
+      if (!owner || !name || !vocabText) {
+        alert("Vui lòng điền đầy đủ thông tin.");
         return;
       }
-      if (!topicName || words.length === 0) {
-        alert("Vui lòng nhập tên chủ đề và ít nhất 1 từ vựng.");
-        return;
-      }
 
-      try {
-        // Bước 1: Tạo topic mới KHÔNG có topic_id ban đầu
-        const topicRef = await addDoc(collection(db, "topics"), {
-          owner,
-          name: topicName,
-          created_at: serverTimestamp()
-        });
+      const topicRef = await addDoc(collection(db, "topics"), {
+        name,
+        owner,
+        created_at: Timestamp.now(),
+        topic_id: ""
+      });
 
-        // Bước 2: cập nhật topic_id cho document vừa tạo
-        await updateDoc(doc(db, "topics", topicRef.id), {
-          topic_id: topicRef.id
-        });
+      await updateDoc(doc(db, "topics", topicRef.id), {
+        topic_id: topicRef.id
+      });
 
-        // Bước 3: lưu từng từ vựng vào vocabularies
-        for (const item of words) {
+      const vocabLines = vocabText.split('\n').map(l => l.trim()).filter(Boolean);
+
+      for (const line of vocabLines) {
+        const [word, meaning] = line.split("-").map(s => s.trim());
+        if (word && meaning) {
           await addDoc(collection(db, "vocabularies"), {
-            topic_id: topicRef.id,
-            word: item.word,
-            meaning: item.meaning,
-            created_at: serverTimestamp()
+            word,
+            meaning,
+            topic_id: topicRef.id
           });
         }
-
-        alert("Đã lưu chủ đề và từ vựng thành công!");
-        location.reload();
-      } catch (e) {
-        console.error("Lỗi khi lưu: ", e);
-        alert("Lỗi khi lưu chủ đề.");
       }
-    };
+
+      alert("Tạo chủ đề thành công!");
+      window.location.href = "topics.html";
+    });
+
+    updatePreview();
   </script>
 </body>
 </html>
