--- a/flashcard.html
+++ b/flashcard.html
@@ -2,152 +2,238 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Học Từ Vựng - Flashcard | AllENInHere</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flashcard | AllInEnglish</title>
   <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
-    }
-
     body {
-      margin: 0;
-      padding: 0;
-      background: #e3f2fd;
+      font-family: 'Segoe UI', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      background-color: #f3f6f9;
+      padding: 20px;
       min-height: 100vh;
+      box-sizing: border-box;
     }
-
-    h1 {
-      margin-top: 20px;
-      color: #0d47a1;
+    h2 {
+      color: #1976d2;
+      margin-bottom: 10px;
     }
-
-    .flashcard-container {
-      margin-top: 20px;
-      width: 300px;
-      height: 200px;
+    #topic-name {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 5px;
+      color: #444;
+    }
+    #card-counter {
+      margin-bottom: 15px;
+      font-size: 18px;
+      color: #555;
+    }
+    .card-wrapper {
       perspective: 1000px;
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-
+    .fade-container {
+      transition: opacity 0.3s ease;
+    }
+    .fade-out {
+      opacity: 0;
+    }
+    .fade-in {
+      opacity: 1;
+    }
     .flashcard {
-      width: 100%;
-      height: 100%;
+      width: 480px;
+      height: 280px;
       position: relative;
       transition: transform 0.6s;
       transform-style: preserve-3d;
       cursor: pointer;
     }
-
-    .flashcard.flip {
+    .flipped {
       transform: rotateY(180deg);
     }
-
-    .front, .back {
+    .card-face {
       position: absolute;
       width: 100%;
       height: 100%;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
-      display: flex;
-      align-items: center;
-      justify-content: center;
       backface-visibility: hidden;
-      font-size: 28px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 20px;
+      font-size: 36px;
+      font-weight: bold;
       text-align: center;
+      box-sizing: border-box;
     }
-
-    .front {
-      background-color: #42a5f5;
-      color: white;
-    }
-
-    .back {
-      background-color: #fff59d;
+    .card-front {
+      background-color: #ffffff;
       color: #333;
+    }
+    .card-back {
+      background-color: #1976d2;
+      color: white;
       transform: rotateY(180deg);
     }
-
-    .buttons {
-      margin-top: 20px;
+    .controls {
       display: flex;
+      justify-content: center;
       gap: 20px;
+      margin-top: 10px;
     }
-
     button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background: #1976d2;
+      padding: 12px 20px;
+      background-color: #1976d2;
       color: white;
       border: none;
-      border-radius: 8px;
+      border-radius: 6px;
       cursor: pointer;
-      transition: background-color 0.3s;
+      font-size: 18px;
     }
-
-    button:hover {
-      background-color: #0d47a1;
+    button:disabled {
+      background-color: #ccc;
+      cursor: default;
     }
   </style>
 </head>
 <body>
-
-  <h1>Flashcard Từ Vựng</h1>
-
-  <div class="flashcard-container" onclick="flipCard()">
-    <div class="flashcard" id="flashcard">
-      <div class="front" id="front">Loading...</div>
-      <div class="back" id="back">...</div>
+  <h2>Ôn Tập Từ Vựng</h2>
+  <div id="topic-name">Chủ đề: ...</div>
+  <div id="card-counter">Từ 0/0</div>
+  <div class="card-wrapper">
+    <div class="fade-container" id="fade-container">
+      <div class="flashcard" id="flashcard">
+        <div class="card-face card-front" id="card-front">Đang tải...</div>
+        <div class="card-face card-back" id="card-back">...</div>
+      </div>
     </div>
   </div>
-
-  <div class="buttons">
-    <button onclick="prevCard()">◀ Trước</button>
-    <button onclick="nextCard()">Tiếp ▶</button>
+  <div class="controls">
+    <button id="prevBtn">◀ Trước</button>
+    <button id="nextBtn">Tiếp ▶</button>
+    <button id="shuffleBtn">🔀 Trộn</button>
   </div>
 
-  <script>
-    const words = [
-      { word: "apple", meaning: "quả táo" },
-      { word: "run", meaning: "chạy" },
-      { word: "beautiful", meaning: "xinh đẹp" },
-      { word: "study", meaning: "học tập" },
-      { word: "friendship", meaning: "tình bạn" }
-    ];
+  <script type="module">
+    import { db } from './js/firebaseConfig.js';
+    import {
+      collection,
+      query,
+      where,
+      getDocs,
+      doc,
+      getDoc
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-    let current = 0;
     const flashcard = document.getElementById("flashcard");
-    const front = document.getElementById("front");
-    const back = document.getElementById("back");
+    const fadeContainer = document.getElementById("fade-container");
+    const front = document.getElementById("card-front");
+    const back = document.getElementById("card-back");
+    const prevBtn = document.getElementById("prevBtn");
+    const nextBtn = document.getElementById("nextBtn");
+    const shuffleBtn = document.getElementById("shuffleBtn");
+    const counter = document.getElementById("card-counter");
+    const topicName = document.getElementById("topic-name");
 
-    function showCard() {
-      const item = words[current];
-      front.textContent = item.word;
-      back.textContent = item.meaning;
-      flashcard.classList.remove("flip");
+    const urlParams = new URLSearchParams(window.location.search);
+    const topicId = urlParams.get("topic_id");
+
+    let cards = [];
+    let current = 0;
+    let flipped = false;
+
+    if (!topicId) {
+      front.innerText = "Không tìm thấy chủ đề.";
+      prevBtn.disabled = true;
+      nextBtn.disabled = true;
+      shuffleBtn.disabled = true;
+    } else {
+      const topicDoc = await getDoc(doc(db, "topics", topicId));
+      if (topicDoc.exists()) {
+        topicName.innerText = `Chủ đề: ${topicDoc.data().name}`;
+      } else {
+        topicName.innerText = "Chủ đề không tồn tại";
+      }
+
+      const q = query(collection(db, "vocabularies"), where("topic_id", "==", topicId));
+      const snapshot = await getDocs(q);
+
+      const stored = localStorage.getItem("shuffledOrder");
+      if (stored) {
+        const temp = JSON.parse(stored);
+        if (temp.length > 0 && temp[0].topic_id === topicId) {
+          cards = temp;
+        } else {
+          localStorage.removeItem("shuffledOrder");
+          cards = snapshot.docs.map(doc => doc.data());
+        }
+      } else {
+        cards = snapshot.docs.map(doc => doc.data());
+      }
+
+      if (cards.length === 0) {
+        front.innerText = "Chủ đề này chưa có từ vựng.";
+        prevBtn.disabled = true;
+        nextBtn.disabled = true;
+        shuffleBtn.disabled = true;
+        counter.innerText = "Từ 0/0";
+      } else {
+        renderCard();
+      }
     }
 
-    function nextCard() {
-      current = (current + 1) % words.length;
-      showCard();
+    function renderCard() {
+      const currentCard = cards[current];
+      front.innerText = currentCard.word;
+      back.innerText = currentCard.meaning;
+      flashcard.classList.remove("flipped");
+      flipped = false;
+      counter.innerText = `Từ ${current + 1}/${cards.length}`;
     }
 
-    function prevCard() {
-      current = (current - 1 + words.length) % words.length;
-      showCard();
-    }
+    flashcard.addEventListener("click", () => {
+      flipped = !flipped;
+      flashcard.classList.toggle("flipped", flipped);
+    });
 
-    function flipCard() {
-      flashcard.classList.toggle("flip");
-    }
+    prevBtn.addEventListener("click", () => {
+      if (current > 0) {
+        current--;
+        renderCard();
+      }
+    });
 
-    showCard();
+    nextBtn.addEventListener("click", () => {
+      if (current < cards.length - 1) {
+        current++;
+        renderCard();
+      }
+    });
+
+    shuffleBtn.addEventListener("click", () => {
+      fadeContainer.classList.add("fade-out");
+      setTimeout(() => {
+        for (let i = cards.length - 1; i > 0; i--) {
+          const j = Math.floor(Math.random() * (i + 1));
+          [cards[i], cards[j]] = [cards[j], cards[i]];
+        }
+        localStorage.setItem("shuffledOrder", JSON.stringify(cards));
+        current = 0;
+        renderCard();
+        fadeContainer.classList.remove("fade-out");
+        fadeContainer.classList.add("fade-in");
+        setTimeout(() => {
+          fadeContainer.classList.remove("fade-in");
+        }, 300);
+      }, 300);
+    });
   </script>
-
 </body>
 </html>
