--- a/index.html
+++ b/index.html
@@ -1,54 +1,75 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trang chủ | AllENInHere</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AllENInHere - Menu Chức Năng</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f3f6f9;
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
+      padding: 0;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
     }
-    h1 {
-      color: #2c3e50;
-    }
-    .btn-group {
-      margin-top: 20px;
-    }
-    button {
-      padding: 10px 20px;
-      margin: 0 10px;
-      border: none;
-      background-color: #007bff;
+    header {
+      width: 100%;
+      background-color: #1976d2;
       color: white;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-sizing: border-box;
     }
-    button:hover {
-      background-color: #0056b3;
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+    .menu {
+      margin-top: 60px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      width: 90%;
+      max-width: 500px;
+    }
+    .menu a {
+      display: block;
+      text-decoration: none;
+      background-color: white;
+      padding: 20px;
+      border-radius: 12px;
+      font-size: 20px;
+      color: #1976d2;
+      font-weight: bold;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: background-color 0.2s;
+      text-align: center;
+    }
+    .menu a:hover {
+      background-color: #e3f2fd;
     }
   </style>
 </head>
 <body>
-  <h1>Chào mừng đến với AllENInHere</h1>
-  <div class="btn-group">
-    <button onclick="location.href='create-topic.html'">Tạo chủ đề</button>
-    <button onclick="location.href='flashcard.html'">Ôn tập Flashcard</button>
-  </div>
+  <header>
+    <h1>AllENInHere</h1>
+    <div><a href="#" style="color:white; text-decoration:none;">👤 Tài khoản</a></div>
+  </header>
 
-  <script>
-    // Nếu chưa đăng nhập, chuyển về login.html
-    const username = localStorage.getItem("loggedInUser");
-    if (!username) {
-      window.location.href = "login.html";
-    }
-  </script>
+  <div class="menu">
+    <a href="topics.html">📚 Quản lý Chủ đề</a>
+    <a href="topics.html">🔁 Ôn từ vựng (Flashcard)</a>
+    <a href="#">📝 Trắc nghiệm (đang phát triển)</a>
+    <a href="#">📄 Luyện đề (đang phát triển)</a>
+  </div>
 </body>
 </html>
