--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AllENInHere - Menu Chức Năng</title>
+  <title>AllInEnglish - Menu Chức Năng</title>
   <style>
     * {
       box-sizing: border-box;
@@ -61,7 +61,7 @@
 </head>
 <body>
   <header>
-    <h1>AllENInHere</h1>
+    <h1>All In English</h1>
     <div><a href="#" style="color:white; text-decoration:none;">👤 Tài khoản</a></div>
   </header>
 
