--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 </head>
 <body>
   <header>
-    <h1>All In English</h1>
-    <div><a href="#" style="color:white; text-decoration:none;">👤 Tài khoản</a></div>
+    <h1>AllInEnglish</h1>
+    <div><a href="account.html" style="color:white; text-decoration:none;">👤 Tài khoản</a></div>
   </header>
 
   <div class="menu">
