--- a/login.html
+++ b/login.html
@@ -3,41 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Đăng nhập | AllInEnglish</title>
+  <title>Đăng nhập / Đăng ký | AllInEnglish</title>
   <style>
+    * { box-sizing: border-box; }
     body {
-      background: #eef2f7;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #1976d2, #42a5f5);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
     }
-    .login-box {
-      background: #fff;
-      padding: 30px 40px;
+    .auth-box {
+      background: white;
+      padding: 32px;
       border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
       width: 100%;
-      max-width: 400px;
+      max-width: 420px;
     }
     h2 {
       text-align: center;
-      margin-bottom: 25px;
       color: #1976d2;
     }
-    input[type="text"], input[type="password"] {
+    input {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
-      border: 1px solid #ccc;
       border-radius: 6px;
+      border: 1px solid #ccc;
     }
     button {
       width: 100%;
-      padding: 10px;
-      background-color: #1976d2;
+      padding: 12px;
+      margin-top: 12px;
+      background: #1976d2;
       color: white;
       border: none;
       border-radius: 6px;
@@ -45,51 +46,114 @@
       cursor: pointer;
     }
     button:hover {
-      background-color: #1259a7;
+      background: #1259a7;
     }
-    .link {
+    .toggle {
       text-align: center;
-      margin-top: 15px;
+      margin-top: 14px;
     }
-    .link a {
+    .toggle a {
       color: #1976d2;
       text-decoration: none;
+      cursor: pointer;
+    }
+    .hidden {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <div class="login-box">
-    <h2>Đăng nhập</h2>
-    <input type="text" id="username" placeholder="Tên đăng nhập">
-    <input type="password" id="password" placeholder="Mật khẩu">
-    <button onclick="login()">Đăng nhập</button>
-    <div class="link">
-      Chưa có tài khoản? <a href="register.html">Đăng ký</a>
+  <div class="auth-box">
+    <h2 id="form-title">Đăng nhập</h2>
+
+    <div id="login-form">
+      <input type="text" id="login-username" placeholder="Tên đăng nhập">
+      <input type="password" id="login-password" placeholder="Mật khẩu">
+      <button onclick="login()">Đăng nhập</button>
+      <div class="toggle">Chưa có tài khoản? <a onclick="toggleForm()">Đăng ký ngay</a></div>
+    </div>
+
+    <div id="register-form" class="hidden">
+      <input type="text" id="register-username" placeholder="Tên đăng nhập">
+      <input type="password" id="register-password" placeholder="Mật khẩu">
+      <input type="text" id="register-email" placeholder="Email (tuỳ chọn)">
+      <button onclick="register()">Đăng ký</button>
+      <div class="toggle">Đã có tài khoản? <a onclick="toggleForm()">Đăng nhập</a></div>
     </div>
   </div>
 
   <script type="module">
     import { db } from './js/firebaseConfig.js';
-    import { collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import {
+      collection, query, where, getDocs, addDoc
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+    window.toggleForm = () => {
+      const login = document.getElementById("login-form");
+      const register = document.getElementById("register-form");
+      const title = document.getElementById("form-title");
+
+      if (login.classList.contains("hidden")) {
+        login.classList.remove("hidden");
+        register.classList.add("hidden");
+        title.textContent = "Đăng nhập";
+      } else {
+        login.classList.add("hidden");
+        register.classList.remove("hidden");
+        title.textContent = "Đăng ký";
+      }
+    }
 
     window.login = async () => {
-      const username = document.getElementById("username").value.trim();
-      const password = document.getElementById("password").value.trim();
+      const username = document.getElementById("login-username").value.trim();
+      const password = document.getElementById("login-password").value.trim();
 
-      if (!username || !password) {
-        alert("Vui lòng nhập đủ tên đăng nhập và mật khẩu.");
-        return;
-      }
+      if (!username || !password) return alert("Vui lòng nhập đủ thông tin.");
 
       const q = query(collection(db, "users"), where("username", "==", username), where("password", "==", password));
       const snapshot = await getDocs(q);
 
       if (!snapshot.empty) {
-        localStorage.setItem("loggedInUser", username);
-        window.location.href = "index.html";
+        snapshot.forEach(doc => {
+          const userData = doc.data();
+          const currentUser = {
+            username: userData.username,
+            email: userData.email || "",
+            createdAt: userData.createdAt || new Date().toLocaleString()
+          };
+          localStorage.setItem("currentUser", JSON.stringify(currentUser));
+          window.location.href = "index.html";
+        });
       } else {
         alert("Tên đăng nhập hoặc mật khẩu không đúng.");
       }
+    }
+
+    window.register = async () => {
+      const username = document.getElementById("register-username").value.trim();
+      const password = document.getElementById("register-password").value.trim();
+      const email = document.getElementById("register-email").value.trim();
+
+      if (!username || !password) return alert("Vui lòng nhập tên và mật khẩu.");
+
+      const q = query(collection(db, "users"), where("username", "==", username));
+      const snapshot = await getDocs(q);
+
+      if (!snapshot.empty) {
+        alert("Tên đăng nhập đã tồn tại. Hãy chọn tên khác.");
+        return;
+      }
+
+      const newUser = {
+        username,
+        password,
+        email,
+        createdAt: new Date().toLocaleString()
+      };
+
+      await addDoc(collection(db, "users"), newUser);
+      alert("Đăng ký thành công! Hãy đăng nhập.");
+      toggleForm();
     }
   </script>
 </body>
