--- a/index.html
+++ b/index.html
@@ -1,75 +1,75 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AllInEnglish - Menu Chức Năng</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trang chủ | AllInEnglish</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f3f6f9;
+      background-color: #f0f4f8;
       margin: 0;
       padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
     }
     header {
-      width: 100%;
       background-color: #1976d2;
       color: white;
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      box-sizing: border-box;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 24px;
-    }
-    .menu {
-      margin-top: 60px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      width: 90%;
-      max-width: 500px;
-    }
-    .menu a {
-      display: block;
-      text-decoration: none;
-      background-color: white;
       padding: 20px;
-      border-radius: 12px;
-      font-size: 20px;
-      color: #1976d2;
-      font-weight: bold;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      transition: background-color 0.2s;
       text-align: center;
     }
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      text-align: center;
+    }
+    h1 {
+      color: #1976d2;
+    }
+    .menu {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .menu a {
+      display: inline-block;
+      padding: 16px 24px;
+      background-color: #ffffff;
+      border: 1px solid #1976d2;
+      border-radius: 8px;
+      text-decoration: none;
+      color: #1976d2;
+      font-weight: bold;
+      transition: background-color 0.3s, color 0.3s;
+    }
     .menu a:hover {
-      background-color: #e3f2fd;
+      background-color: #1976d2;
+      color: white;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>AllInEnglish</h1>
-    <div><a href="account.html" style="color:white; text-decoration:none;">👤 Tài khoản</a></div>
+    <h1>AllInEnglish - Học từ vựng TOEIC</h1>
   </header>
+  <main>
+    <h2>Chào mừng bạn đến với All In English!</h2>
+    <p>Chọn một chức năng để bắt đầu:</p>
+    <div class="menu">
+      <a href="topics.html">📚 Quản lý chủ đề</a>
+      <a href="topics.html">🧠 Ôn tập Flashcard</a>
+      <a href="#">📝 Trắc nghiệm từ vựng (Đang phát triển)</a>
+      <a href="#">📖 Luyện đề (Đang phát triển)</a>
+      <a href="account.html">👤 Tài khoản</a>
+    </div>
+  </main>
 
-  <div class="menu">
-    <a href="topics.html">📚 Quản lý Chủ đề</a>
-    <a href="topics.html">🔁 Ôn từ vựng (Flashcard)</a>
-    <a href="#">📝 Trắc nghiệm (đang phát triển)</a>
-    <a href="#">📄 Luyện đề (đang phát triển)</a>
-  </div>
+  <script>
+    const loggedInUser = localStorage.getItem("loggedInUser");
+    if (!loggedInUser) {
+      window.location.href = "login.html";
+    }
+  </script>
 </body>
 </html>
