--- a/account.html
+++ b/account.html
@@ -81,7 +81,7 @@
   <script>
     const user = JSON.parse(localStorage.getItem("currentUser"));
     if (!user) {
-      window.location.href = "login.html";
+      window.location.href = "./login.html";
     } else {
       document.getElementById("username").value = user.username || "";
       document.getElementById("email").value = user.email || "";
@@ -90,7 +90,7 @@
 
     function logout() {
       localStorage.removeItem("currentUser");
-      window.location.href = "login.html";
+      window.location.href = "./login.html";
     }
   </script>
 </body>
