--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
     <h2>Chào mừng bạn đến với All In English!</h2>
     <p>Chọn một chức năng để bắt đầu:</p>
     <div class="menu">
-      <a href="topics.html">📚 Quản lý chủ đề</a>
-      <a href="topics.html">🧠 Ôn tập Flashcard</a>
+      <a href="./topics.html">📚 Quản lý chủ đề</a>
+      <a href="./topics.html">🧠 Ôn tập Flashcard</a>
       <a href="#">📝 Trắc nghiệm từ vựng (Đang phát triển)</a>
       <a href="#">📖 Luyện đề (Đang phát triển)</a>
-      <a href="account.html">👤 Tài khoản</a>
+      <a href="./account.html">👤 Tài khoản</a>
     </div>
   </main>
 
   <script>
     const loggedInUser = localStorage.getItem("loggedInUser");
     if (!loggedInUser) {
-      window.location.href = "login.html";
+      window.location.href = "./login.html";
     }
   </script>
 </body>
