--- a/login.html
+++ b/login.html
@@ -122,7 +122,9 @@
             createdAt: userData.createdAt || new Date().toLocaleString()
           };
           localStorage.setItem("currentUser", JSON.stringify(currentUser));
-          window.location.href = "index.html";
+          setTimeout(() => {
+            window.location.href = "./index.html";
+          }, 100); // chờ 100ms cho chắc ăn
         });
       } else {
         alert("Tên đăng nhập hoặc mật khẩu không đúng.");
