--- a/account.html
+++ b/account.html
@@ -89,7 +89,7 @@
     }
 
     function logout() {
-      localStorage.removeItem("currentUser");
+      localStorage.clear();
       window.location.href = "./login.html";
     }
   </script>
