--- a/topics.html
+++ b/topics.html
@@ -72,7 +72,7 @@
   <h2>Các Chủ Đề Bạn Đã Tạo</h2>
 
   <div id="add-topic-form">
-    <a href="create-topic.html">➕ Thêm chủ đề mới</a>
+    <a href="./create-topic.html">➕ Thêm chủ đề mới</a>
   </div>
 
   <div class="topics-container" id="topics-list">
