--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
     <p>Chọn một chức năng để bắt đầu:</p>
     <div class="menu">
       <a href="./topics.html">📚 Quản lý chủ đề</a>
-      <a href="./topics.html">🧠 Ôn tập Flashcard</a>
-      <a href="#">📝 Trắc nghiệm từ vựng (Đang phát triển)</a>
-      <a href="#">📖 Luyện đề (Đang phát triển)</a>
+      <a href="./topics.html">🧠 Flashcard từ vựng </a>
+      <a href="#">📝 Trắc nghiệm từ vựng<br>(Đang phát triển)</a>
+      <a href="#">🎧 Luyện nghe<br>(Đang phát triển)</a>
+      <a href="#">📖 Luyện đề thực chiến<br>(Đang phát triển)</a>
     </div>
   </main>
 
