--- a/flashcard.html
+++ b/flashcard.html
@@ -1,135 +1,155 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flashcard | AllInEnglish</title>
   <style>
-  body {
-    font-family: 'Segoe UI', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #f3f6f9;
-    padding: 20px;
-    min-height: 100vh;
-    box-sizing: border-box;
-  }
-  h2 {
-    color: #1976d2;
-    margin-bottom: 10px;
-    text-align: center;
-  }
-  #topic-name {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #444;
-    text-align: center;
-  }
-  #card-counter {
-    margin-bottom: 15px;
-    font-size: 18px;
-    color: #555;
-    text-align: center;
-  }
-  .card-wrapper {
-    perspective: 1000px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-  .fade-container {
-    transition: opacity 0.3s ease;
-    width: 100%;
-    max-width: 500px;
-  }
-  .fade-out {
-    opacity: 0;
-  }
-  .fade-in {
-    opacity: 1;
-  }
-  .flashcard {
-    width: 100%;
-    height: 0;
-    padding-top: 58.33%; /* Tỷ lệ 280/480 = 0.5833 */
-    position: relative;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    cursor: pointer;
-  }
-  .flipped {
-    transform: rotateY(180deg);
-  }
-  .card-face {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    font-size: clamp(20px, 5vw, 36px);
-    font-weight: bold;
-    text-align: center;
-    box-sizing: border-box;
-  }
-  .card-front {
-    background-color: #ffffff;
-    color: #333;
-  }
-  .card-back {
-    background-color: #1976d2;
-    color: white;
-    transform: rotateY(180deg);
-  }
-  .controls {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-top: 10px;
-  }
-  button {
-    padding: 12px 16px;
-    background-color: #1976d2;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 16px;
-    flex: 1 1 100px;
-  }
-  button:disabled {
-    background-color: #ccc;
-    cursor: default;
-  }
-  @media (min-width: 600px) {
-    button {
-      flex: unset;
-      min-width: 120px;
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #f3f6f9;
+      padding: 20px;
+      min-height: 100vh;
+      box-sizing: border-box;
     }
-  }
-</style>
+
+    h2 {
+      color: #1976d2;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+
+    #topic-name {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 5px;
+      color: #444;
+      text-align: center;
+    }
+
+    #card-counter {
+      margin-bottom: 15px;
+      font-size: 18px;
+      color: #555;
+      text-align: center;
+    }
+
+    .card-wrapper {
+      perspective: 1000px;
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      max-width: 500px;
+      aspect-ratio: 5 / 3;
+    }
+
+    .flashcard {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform-style: preserve-3d;
+      transition: transform 0.6s;
+      transform-origin: center center;
+      cursor: pointer;
+    }
+
+    .flipped {
+      transform: rotateY(180deg);
+    }
+
+    .card-face {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      font-size: clamp(20px, 5vw, 36px);
+      font-weight: bold;
+      text-align: center;
+      box-sizing: border-box;
+    }
+
+    .card-front {
+      background-color: #ffffff;
+      color: #333;
+    }
+
+    .card-back {
+      background-color: #1976d2;
+      color: white;
+      transform: rotateY(180deg);
+    }
+
+    .controls {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    button {
+      padding: 12px 16px;
+      background-color: #1976d2;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 16px;
+      flex: 1 1 100px;
+    }
+
+    button:disabled {
+      background-color: #ccc;
+      cursor: default;
+    }
+
+    @media (min-width: 600px) {
+      button {
+        flex: unset;
+        min-width: 120px;
+      }
+    }
+
+    .slide-transition {
+      animation: slideInRight 0.6s ease-in-out;
+    }
+
+    @keyframes slideInRight {
+      0% {
+        scale: 0.3;
+        opacity: 0;
+      }
+
+      100% {
+        scale: 1;
+        opacity: 1;
+      }
+    }
+  </style>
 </head>
+
 <body>
   <h2>Ôn Tập Từ Vựng</h2>
   <div id="topic-name">Chủ đề: ...</div>
   <div id="card-counter">Từ 0/0</div>
   <div class="card-wrapper">
-    <div class="fade-container" id="fade-container">
-      <div class="flashcard" id="flashcard">
-        <div class="card-face card-front" id="card-front">Đang tải...</div>
-        <div class="card-face card-back" id="card-back">...</div>
-      </div>
+    <div class="flashcard" id="flashcard">
+      <div class="card-face card-front" id="card-front">Đang tải...</div>
+      <div class="card-face card-back" id="card-back">...</div>
     </div>
   </div>
   <div class="controls">
@@ -150,7 +170,6 @@
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
     const flashcard = document.getElementById("flashcard");
-    const fadeContainer = document.getElementById("fade-container");
     const front = document.getElementById("card-front");
     const back = document.getElementById("card-back");
     const prevBtn = document.getElementById("prevBtn");
@@ -207,12 +226,14 @@
     }
 
     function renderCard() {
+      flashcard.classList.remove("flipped");
+      flipped = false;
       const currentCard = cards[current];
       front.innerText = currentCard.word;
       back.innerText = currentCard.meaning;
-      flashcard.classList.remove("flipped");
-      flipped = false;
       counter.innerText = `Từ ${current + 1}/${cards.length}`;
+      flashcard.classList.add("slide-transition");
+      setTimeout(() => flashcard.classList.remove("slide-transition"), 650);
     }
 
     flashcard.addEventListener("click", () => {
@@ -235,22 +256,15 @@
     });
 
     shuffleBtn.addEventListener("click", () => {
-      fadeContainer.classList.add("fade-out");
-      setTimeout(() => {
-        for (let i = cards.length - 1; i > 0; i--) {
-          const j = Math.floor(Math.random() * (i + 1));
-          [cards[i], cards[j]] = [cards[j], cards[i]];
-        }
-        localStorage.setItem("shuffledOrder", JSON.stringify(cards));
-        current = 0;
-        renderCard();
-        fadeContainer.classList.remove("fade-out");
-        fadeContainer.classList.add("fade-in");
-        setTimeout(() => {
-          fadeContainer.classList.remove("fade-in");
-        }, 300);
-      }, 300);
+      for (let i = cards.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [cards[i], cards[j]] = [cards[j], cards[i]];
+      }
+      localStorage.setItem("shuffledOrder", JSON.stringify(cards));
+      current = 0;
+      renderCard();
     });
   </script>
 </body>
+
 </html>
